--- a/Areas/User/Views/Cart/Checkout.cshtml
+++ b/Areas/User/Views/Cart/Checkout.cshtml
@@ -17,14 +17,14 @@
         </div>
         <div class="checkout__form">
             <h4>Billing Details</h4>
-            <form action="#">
+            <form method="post" action="">
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="checkout__input">
                                     <p>Name<span>*</span></p>
-                                    <input type="text" asp-for="Order.Name">
+                                    <input type="text" asp-for="Order.Name" required>
                                 </div>
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                         </div>-->
                         <div class="checkout__input">
                             <p>Address<span>*</span></p>
-                            <input type="text" asp-for="Order.Address" placeholder="Street Address">
+                            <input type="text" asp-for="Order.Address" placeholder="Street Address" required>
                             <!--<input type="text" placeholder="Apartment, suite, unite ect (optinal)">-->
                         </div>
                         <!--
@@ -56,7 +56,7 @@
                             <div class="col-lg-6">
                                 <div class="checkout__input">
                                     <p>Phone<span>*</span></p>
-                                    <input type="text" asp-for="Order.PhoneNumber">
+                                    <input type="text" asp-for="Order.PhoneNumber" required>
                                 </div>
                             </div>
                             <!--
@@ -75,12 +75,6 @@
                                 <span class="checkmark"></span>
                             </label>
                         </div>
-                        <p>Create an account by entering the information below. If you are a returning customer
-                            please login at the top of the page</p>
-                        <div class="checkout__input">
-                            <p>Account Password<span>*</span></p>
-                            <input type="text">
-                        </div>
                         <div class="checkout__input__checkbox">
                             <label for="diff-acc">
                                 Ship to a different address?
@@ -89,7 +83,7 @@
                             </label>
                         </div>
                         <div class="checkout__input">
-                            <p>Order notes<span>*</span></p>
+                            <p>Order notes</p>
                             <input type="text"
                                 placeholder="Notes about your order, e.g. special notes for delivery.">
                         </div>
