--- a/Areas/Admin/Views/Cameras/Create.cshtml
+++ b/Areas/Admin/Views/Cameras/Create.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Create";
 }
 
+<vc:big-banner Title="Create"
+               SubTitle="Fill information of a camera and create it"></vc:big-banner>
 <div class="container">
 	<h1>@ViewData["Title"]</h1>
 	<h3>Thêm máy ảnh mới</h3>
@@ -18,6 +20,18 @@
 			<input asp-for="CameraPrice" type="text" class="form-control" />
 			<span asp-validation-for="CameraPrice" class="text-danger"></span>
 		</article>
+		<div class="row">
+			<article class="form__input-container col-lg-6">
+				<label asp-for="CameraAmount">Số lượng</label>
+				<input asp-for="CameraAmount" type="number" min="0" max="1000" value="0" class="form-control" />
+				<span asp-validation-for="CameraAmount" class="text-danger"></span>
+			</article>
+			<article class="form__input-container col-lg-6">
+				<label asp-for="CameraDiscount">Giảm ? %</label>
+				<input asp-for="CameraDiscount" type="number" min="0" max="100" value="0" class="form-control" />
+				<span asp-validation-for="CameraDiscount" class="text-danger"></span>
+			</article>
+		</div>
 		<article class="form__input-container">
 			<label asp-for="CameraFeatures">Tính năng của máy</label>
 			<textarea asp-for="CameraFeatures" class="description-field"></textarea>
@@ -48,6 +62,7 @@
 			<button type="button" class="btn btn-outline-secondary" id="js-addNewInputFileTagButton">Thêm ảnh</button>
 		</div>
 		<button type="submit" class="btn btn-primary">Tạo mới</button>
+		<a href="/Admin/Cameras" class="btn btn-light">Trở về</a>
 	</form>
 </div>
-<partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
+<script src="~/js/addInputFileTag.js"></script>
