--- a/Areas/Admin/Views/Shared/_AdminHeaderPartial.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminHeaderPartial.cshtml
@@ -1,10 +1,58 @@
 ﻿@{
     string currentActionName = this.ViewContext.RouteData.Values["action"]?.ToString();
     string currentControllerName = this.ViewContext.RouteData.Values["controller"]?.ToString();
-    string isHomeShowing = currentControllerName.Equals("") ? "active" : "";
-    string isCreateShowing = currentActionName.Equals("Create") ? "active" : "";
+    string isHomeShowing = currentControllerName.Equals("Admin") ? "active" : "";
+    string isAllOrdersShowing = currentControllerName.Equals("Orders") ? "active" : "";
     string isAllCamerasShowing = currentControllerName.Equals("Cameras") && !currentActionName.Equals("Create") ? "active" : "";
 }
+<!-- Humberger Begin -->
+<div class="humberger__menu__overlay"></div>
+<div class="humberger__menu__wrapper">
+    <div class="humberger__menu__logo">
+        <a asp-controller="Home" asp-action=""><img src="~/img/logo.png" alt=""></a>
+    </div>
+    <div class="humberger__menu__cart">
+        <ul>
+            <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
+            <li><a asp-action="Shop"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+        </ul>
+        <div class="header__cart__price">item: <span>$150.00</span></div>
+    </div>
+    <div class="humberger__menu__widget">
+        <div class="header__top__right__language">
+            <img src="~/img/language.png" alt="">
+            <div>English</div>
+            <span class="arrow_carrot-down"></span>
+            <ul>
+                <li><a href="#">Spanis</a></li>
+                <li><a href="#">English</a></li>
+            </ul>
+        </div>
+        <div class="header__top__right__auth">
+            <partial name="~/Views/Shared/_LoginPartial.cshtml" />
+        </div>
+    </div>
+    <nav class="humberger__menu__nav mobile-menu">
+        <ul>
+            <li><a asp-area="Admin" asp-controller="" asp-action="">Home</a></li>
+            <li><a asp-area="Admin" asp-controller="Cameras" asp-action="">All Cameras</a></li>
+            <li><a asp-area="Admin" asp-controller="Orders" asp-action="">All Orders</a></li>
+        </ul>
+    </nav>
+    <div id="mobile-menu-wrap"></div>
+    <div class="header__top__right__social">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-pinterest-p"></i></a>
+    </div>
+    <div class="humberger__menu__contact">
+        <ul>
+            <li><i class="fa fa-envelope"></i> Dashboard</li>
+            <li>Welcome to admin workspace!</li>
+        </ul>
+    </div>
+</div>
 <!-- Header Section Begin -->
     <header class="header">
         <div class="header__top">
@@ -39,17 +87,18 @@
         </div>
         <div class="container">
         <div class="row">
-                <div class="col-lg-3">
+            <!--
+                <div class="col-lg-2">
                     <div class="header__logo">
                         <a asp-area="User" asp-controller="Home" asp-action=""><img src="~/img/logo.png" alt=""></a>
                     </div>
-                </div>
-                <div class="col-lg-9">
+                </div>-->
+                <div class="col-lg-12">
                     <nav class="header__menu">
                         <ul>
                             <li class=@isHomeShowing><a asp-area="Admin" asp-controller="" asp-action="">Home</a></li>
                             <li class=@isAllCamerasShowing><a asp-area="Admin" asp-controller="Cameras" asp-action="">All Cameras</a></li>
-                            <li class=@isCreateShowing><a asp-area="Admin" asp-controller="Cameras" asp-action="Create">Create a new camera</a></li>
+                        <li class=@isAllOrdersShowing><a asp-area="Admin" asp-controller="Orders" asp-action="">All Orders</a></li>
                         </ul>
                     </nav>
                 </div>
