--- a/Areas/User/Views/Cart/Index.cshtml
+++ b/Areas/User/Views/Cart/Index.cshtml
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shoping__cart__btns">
-                        <a href="User/Shop" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+                        <a href="/User/Shop" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
                         <button type="submit" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
                             Upadate Cart</button>
                     </div>
