--- a/Areas/User/Views/Order/Details.cshtml
+++ b/Areas/User/Views/Order/Details.cshtml
@@ -2,7 +2,7 @@
 
 <vc:big-banner Title="Your Order Details"
                SubTitle="Tracking your orders, where it went and when it come."></vc:big-banner>
-<div class="mt-4">
+<div class="container mt-4">
     <h2 class="mb-3"><strong>You product in order</strong></h2>
     <div class="information">
         <h4 class="mb-3"><strong>Order Information</strong></h4>
@@ -31,13 +31,14 @@
             </div>
         </div>
     </div>
+    <hr />
     <div class="information">
         <h4 class="mb-3"><strong>Cameras Information</strong></h4>
-        <div class="row">
+        <div class="my-3">
             @foreach(OrderDetailsModel o in ViewBag.OrderDetailList) {
-                <div class="my-3">
+                <div class="row my-3">
                     <div class="col-lg-4">
-                        <div>
+                        <div class="information-image">
                             <img src="~/@o.Camera.ImageUrls.Split(';')[0]" />
                         </div>
                     </div>
@@ -45,10 +46,8 @@
                         <p>
                             <strong>Name:</strong> <span>@o.Camera.Name</span>
                         </p>
-                        <p>
-                            <strong>Brand:</strong> <span>@o.Camera.BrandName</span>
-                            <strong>Category:</strong> <span>@o.Camera.Category</span>
-                        </p>
+                        <p><strong>Brand:</strong> <span>@o.Camera.BrandName</span></p>
+                        <p><strong>Category:</strong> <span>@o.Camera.Category</span></p>
                         <p>
                             <strong>Amount:</strong> <span>@o.Amount</span>
                         </p>
